<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >

        <RelativeLayout
            android:id="@+id/logo_img_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"


            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_msg_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_img_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:id="@+id/account_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_radius">

                <ImageView
                    android:id="@+id/account_img_view"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/account_img" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/account_img_view"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:hint="@string/login_input_number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pass_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/account_layout"
                android:layout_marginTop="2dp"
                android:background="@drawable/border_radius">

                <ImageView
                    android:id="@+id/pass_img_view"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/pass_img" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/pass_img_view"
                    android:background="@color/white"
                    android:hint="@string/login_input_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="12sp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/_choicelayout_box_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/re_msg_layout"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <CheckBox
                    android:id="@+id/cb_remember_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/login_remember_password"
                    android:textColor="@color/green" />

                <CheckBox
                    android:id="@+id/cb_login_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/cb_remember_pass"
                    android:text="@string/login_automatic_login"
                    android:textColor="@color/green"
                    />

            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/_choicelayout_box_"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_fillet"
            android:lineSpacingExtra="50dp"
            android:text="@string/login_Login"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/login_forget_pass"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:textColor="@color/green"
                android:text="@string/login_register"
                android:textSize="13sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
